--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
- #game div {
-  border: 1px solid black;
-  width: 15%;
-  height: 200px;
-  margin: 10px;
-  display: inline-block;
-} 
+#game div {
+	/* display: none; */
+	border: 1px solid black;
+	width: 15%;
+	height: 200px;
+	margin: 10px;
+	display: inline-block;
+}
+/* #game {
+	display: none;
+} */
