--- a/style.css
+++ b/style.css
@@ -1,11 +1,95 @@
+body {
+	background-image: url("./memoryGamebg1.jpg");
+	background-repeat: repeat;
+	background-size: cover;
+}
+h1 {
+	color: springgreen;
+	text-align: center;
+}
+main {
+	display: flex;
+	flex-direction: column;
+	/* justify-content: center; */
+	align-items: center;
+	height: 100vh;
+}
+#game {
+	margin-top: 20px;
+	display: none;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center;
+}
+.gameContainer {
+	display: flex;
+	justify-content: center;
+	align-content: center;
+}
+.rotate {
+	transform: rotateY(180deg);
+}
+.moves {
+	height: 20px;
+	width: 100vw;
+	display: none;
+	text-align: center;
+	font-size: 20px;
+	margin-top: 20px;
+	background-color: yellowgreen;
+	padding: 4px;
+}
 #game div {
 	/* display: none; */
-	border: 1px solid black;
+
+	border: 5px solid green;
 	width: 15%;
 	height: 200px;
+	width: 150px;
 	margin: 10px;
 	display: inline-block;
+	background-color: white;
+	transition: 1000ms ease-in-out;
 }
-/* #game {
+
+#mainPageContent {
+	width: 100vw;
+	height: 50vh;
+	display: flex;
+	justify-content: space-around;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	font-size: 40px;
+	font-family: "Courier New", Courier, monospace;
+	color: red;
+}
+#startButton {
+	width: 100px;
+	padding: 10px;
+	border: none;
+	box-shadow: 5px 5px;
+	border-radius: 50px;
+	/* margin: 100px; */
+	font-size: large;
+	color: blue;
+	background-color: chartreuse;
+}
+#winner {
 	display: none;
-} */
+	color: blueviolet;
+	font-size: 50px;
+}
+#restartButton {
+	display: none;
+	margin-top: 30px;
+	width: 100px;
+	padding: 10px;
+	box-shadow: 5px 5px;
+	border-radius: 50px;
+	/* margin: 100px; */
+	font-size: large;
+	color: blue;
+	background-color: chartreuse;
+	align-items: center;
+}
