--- a/style.css
+++ b/style.css
@@ -12,18 +12,31 @@ body {
 }
 .lableDiv {
 	/* margin: 20px; */
-	color: red;
-	background-color: green;
+	color: white;
+	/* background-color: green; */
+	background-image: linear-gradient(
+		to right,
+		rgb(71, 8, 71),
+		rgb(180, 54, 180),
+		rgb(8, 8, 161)
+	);
 	border-radius: 25%;
 	padding: 20px;
-	border: 2px solid greenyellow;
+	border: 2px solid blue;
 }
 select {
 	/* display: none; */
 	/* position: absolute; */
-	background-color: #a1f37b5e;
+	/* background-color: #a1f37b5e;
+	 */
+	background-image: linear-gradient(
+		to right,
+		rgb(71, 8, 71),
+		rgb(180, 54, 180),
+		rgb(8, 8, 161)
+	);
 	min-width: 100px;
-	border: 2px solid rgba(66, 199, 88, 0.2);
+	border: 2px solid blue;
 	border-radius: 5%;
 	font-size: 15px;
 	/*
@@ -35,7 +48,7 @@ select {
 	te
 } */
 h1 {
-	color: springgreen;
+	color: white;
 	text-align: center;
 	font-size: 50px;
 }
@@ -68,13 +81,40 @@ main {
 	text-align: center;
 	font-size: 20px;
 	margin-top: 20px;
-	background-color: yellowgreen;
+	color: white;
+	/* background-color: yellowgreen; */
+	background-image: linear-gradient(
+		to right,
+		rgb(71, 8, 71),
+		rgb(180, 54, 180),
+		rgb(8, 8, 161)
+	);
 	/* padding: 4px; */
+}
+.bestScore {
+	width: 100vw;
+	/* display: none; */
+	text-align: center;
+	color: white;
+	font-size: 20px;
+	/* margin-top: 20px; */
+	/* background-color: yellowgreen; */
+	background-image: linear-gradient(
+		to right,
+		rgb(71, 8, 71),
+		rgb(180, 54, 180),
+		rgb(8, 8, 161)
+	);
+}
+#restartResetButton {
+	display: flex;
+	justify-content: space-around;
+	width: 100vw;
 }
 #game div {
 	/* display: none; */
 
-	border: 5px solid green;
+	border: 5px solid blue;
 	width: 15%;
 	height: 12vw;
 	width: 10vw;
@@ -94,18 +134,24 @@ main {
 	text-align: center;
 	font-size: 40px;
 	font-family: "Courier New", Courier, monospace;
-	color: red;
+	color: white;
 }
 #startButton {
 	width: 100px;
 	padding: 10px;
 	border: none;
-	box-shadow: 5px 5px;
+	box-shadow: 0 0 10px rgb(189, 187, 187);
 	border-radius: 50px;
 	/* margin: 100px; */
 	font-size: large;
-	color: blue;
-	background-color: chartreuse;
+	color: rgb(255, 255, 255);
+	font-weight: 700;
+	background-image: linear-gradient(
+		to right,
+		rgb(71, 8, 71),
+		rgb(180, 54, 180),
+		rgb(8, 8, 161)
+	);
 }
 #winner {
 	display: none;
@@ -117,12 +163,36 @@ main {
 	margin-top: 30px;
 	width: 100px;
 	padding: 10px;
-	box-shadow: 5px 5px;
+	box-shadow: 0 0 10px rgb(189, 187, 187);
+
 	border-radius: 50px;
 	/* margin: 100px; */
 	font-size: large;
-	color: blue;
-	background-color: chartreuse;
+	color: white;
+	background-image: linear-gradient(
+		to right,
+		rgb(71, 8, 71),
+		rgb(180, 54, 180),
+		rgb(8, 8, 161)
+	);
+	align-items: center;
+}
+#resetButton {
+	display: none;
+	margin-top: 30px;
+	width: 100px;
+	padding: 10px;
+	box-shadow: 0 0 10px rgb(189, 187, 187);
+	border-radius: 50px;
+	/* margin: 100px; */
+	font-size: large;
+	color: rgb(255, 255, 255);
+	background-image: linear-gradient(
+		to right,
+		rgb(71, 8, 71),
+		rgb(180, 54, 180),
+		rgb(8, 8, 161)
+	);
 	align-items: center;
 }
 
@@ -135,9 +205,14 @@ main {
 		position: absolute;
 		font-size: 10px;
 		transform: scale(4);
-		background-color: cyan;
+		background-image: linear-gradient(
+			to right,
+			rgb(71, 8, 71),
+			rgb(180, 54, 180),
+			rgb(8, 8, 161)
+		);
 		z-index: 1;
 		padding: 2px;
-		box-shadow: 1px 1px;
+		box-shadow: 0 0 10px rgb(189, 187, 187);
 	}
 }
